# jc-compiler

./: .gitignore  Cargo.toml  compile_example.bat  compile_example.sh  hello.c  hello.jc
src/: amd64.rs  compare_bin.py  elf.rs  emitter.rs  hello.asm  main.rs  parser.rs
src/elf/: structs.rs
src/emitter/: abi.rs  amd64.rs  ast.rs  code_context.rs  data.rs  elf.rs  exe.rs  mnemonics.rs  stack.rs  stdlib.rs  structs.rs  symbols.rs  text.rs  variables.rs
src/emitter/abi/: linux.rs  windows.rs
src/emitter/elf/: defs.rs  sections.rs  structs.rs
src/emitter/exe/: defs.rs  sections.rs
src/emitter/stdlib/: linux.rs  windows.rs
src/emitter/text/: abi.rs  code_context.rs  mnemonics.rs
src/emitter/text/abi/: linux.rs  windows.rs
src/emitter/text/stdlib/: linux.rs  windows.rs
src/lexer/: scanner.rs  token.rs
src/parser/: ast_printer.rs
tests/: compiler_test.rs
tests/fixtures/: assignment.jc  extern.jc  funcs.jc  hello.jc  loop.jc
