[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnemonics-derive = { path = "mnemonics-derive" }
lazy_static = "1.4.0"
paste = "1.0.14"
rstest = "0.19.0"
tempfile = "3.10.1"
